<resources>
    <string name="app_name">Hyperlapse Robot Controller</string>
    <string name="title_activity_main">Hyperlapse Robot</string>

    <string name="ipAddress">192.168.0.108</string>
    <string name="portNumber">8080</string>

    <string name="conn_status_unknown">Unknown Connection Status</string>
    <string name="conn_status_established">Connection Established</string>

    <string name="title_create_rule_activity">Create a new rule</string>

    <string name="button_cancel">cancel</string>
    <string name="button_apply">apply</string>

    <string name="label_rule_number">Rule №%1$s</string>
    <string name="direction_type">Direction type</string>
    <string name="distance">Distance (cm):</string>
    <string name="preview">Preview:</string>
    <string name="label_movement">Movement:</string>
    <string name="label_camera">Camera:</string>
    <string name="label_degree">Degree:</string>
    <string name="turn_radius">Turn radius:</string>
    <string name="turn_angle">Turn angle:</string>
    <string name="label_execution_time">Execution time (sec):</string>

    <string name="label_pan">Pan</string>
    <string name="label_tilt">Tilt</string>
    <string name="default_distance">0 cm</string>
    <string name="default_execution_time">0 sec</string>
    <string name="default_degree">0°</string>
    <string name="not_connected_status">Not connected</string>
    <string name="connected_status">Connected</string>
    <string name="configure_connection">Configure Connection</string>
    <string name="send_rules">Send Rules</string>
    <string name="btn_add_rules">Add a rule</string>
    <string name="example_text">Example label text</string>

    <string name="degree">%1$d°</string>
    <string name="execution_time">%1$d sec</string>
    <string name="centimeters">%1$d cm</string>
</resources>