<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ConfigureConnectionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_gray"
            android:orientation="vertical"
            android:padding="10dp"
            android:weightSum="4">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <TextView
                    android:id="@+id/label_ip_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:background="@drawable/rounded_corner_blue_500_small_radius"
                    android:labelFor="@id/editText_ip_address"
                    android:padding="5dp"
                    android:text="IP address of the robot"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/editText_ip_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_ip_address"
                    android:digits="0123456789."
                    android:ems="20"
                    android:inputType="number|numberDecimal"
                    android:maxLength="15"
                    android:text="@string/ipAddress" />

                <TextView
                    android:id="@+id/label_port_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editText_ip_address"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_corner_blue_500_small_radius"
                    android:labelFor="@id/editText_port_number"
                    android:padding="5dp"
                    android:text="Port number"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

                <EditText
                    android:id="@+id/editText_port_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_port_number"
                    android:digits="0123456789"
                    android:ems="20"
                    android:inputType="number|numberDecimal"
                    android:maxLength="4"
                    android:text="@string/portNumber" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_white_small_radius"
                android:padding="10dp">

                <Button
                    android:id="@+id/btn_test"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:text="Test Connection" />


                <ImageView
                    android:id="@+id/imageView_connection_status_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_below="@id/btn_test"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:foreground="@drawable/ic_error" />

                <TextView
                    android:id="@+id/textView_connection_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView_connection_status_icon"
                    android:layout_marginTop="10dp"
                    android:background="@color/blue_700"
                    android:padding="5dp"
                    android:text="@string/conn_status_unknown"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_cancle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:text="@string/button_cancel" />

            <Button
                android:id="@+id/btn_apply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:text="@string/button_apply" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>